--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
 		}
 
 	</style>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="lib/cryptojs/rollups/sha1.js"></script>
 	<script src="acid-trail.js"></script>
 	<script src="lib/lorem.js"></script>
